trying to fix icon flicker, contd...

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,8 +1,3 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
-
-
-h1 {
-    color: red;
-}
